--- a/auditlog/views/auditlog_view.xml
+++ b/auditlog/views/auditlog_view.xml
@@ -29,7 +29,7 @@
                                 <field name="action_id" readonly="1" groups="base.group_no_one"/>
                             </group>
                             <group colspan="1">
-                                <field name="log_read"/>
+                                <field name="log_read" invisible="1"/>
                                 <field name="log_write"/>
                                 <field name="log_unlink"/>
                                 <field name="log_create"/>
@@ -71,13 +71,11 @@
             <field name="arch" type="xml">
                 <search string="Rules">
                     <field name="name"/>
-                    <filter name="state_draft"
-                        domain="[('state','=','draft')]" string="Draft"/>
-                    <filter name="state_subscribed"
-                        domain="[('state','=','subscribed')]" string="Subscribed"/>
+                    <filter domain="[('state','=','draft')]" string="Draft"/>
+                    <filter domain="[('state','=','subscribed')]" string="Subscribed"/>
                     <field name="model_id"/>
                     <group expand="0" string="Group By...">
-                        <filter name="group_by_state" string="State"
+                        <filter string="State"
                             domain="[]" context="{'group_by':'state'}"/>
                     </group>
                 </search>
@@ -90,7 +88,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{}</field>
+            <field name="context">{'search_default_draft': 1}</field>
             <field name="search_view_id" ref="view_auditlog_rule_search"/>
         </record>
 
@@ -107,7 +105,7 @@
                     <sheet>
                         <group string="Log">
                             <group colspan="1">
-                                <field name="create_date" readonly="1"/>
+                                <field name="timestamp" required="1" readonly="1"/>
                                 <field name="user_id" readonly="1"/>
                                 <field name="method" readonly="1"/>
                             </group>
@@ -150,7 +148,7 @@
             <field name="model">auditlog.log</field>
             <field name="arch" type="xml">
                 <tree string="Logs" create="false">
-                    <field name="create_date"/>
+                    <field name="timestamp"/>
                     <field name="name"/>
                     <field name="model_id"/>
                     <field name="res_id"/>
@@ -170,18 +168,10 @@
                     <field name="res_id"/>
                     <field name="user_id"/>
                     <group expand="0" string="Group By...">
-                        <filter name="group_by_user_id"
-                            string="User"
-                            domain="[]" context="{'group_by':'user_id'}"/>
-                        <filter name="group_by_model_id"
-                            string="Model"
-                            domain="[]" context="{'group_by':'model_id'}"/>
-                        <filter name="group_by_res_id"
-                            string="Resource ID"
-                            domain="[]" context="{'group_by':'res_id'}"/>
-                        <filter name="group_by_create_date"
-                            string="Date"
-                            domain="[]" context="{'group_by':'create_date'}"/>
+                        <filter string="User" domain="[]" context="{'group_by':'user_id'}"/>
+                        <filter string="Model" domain="[]" context="{'group_by':'model_id'}"/>
+                        <filter string="Resource ID" domain="[]" context="{'group_by':'res_id'}"/>
+                        <filter string="Date" domain="[]" context="{'group_by':'timestamp'}"/>
                     </group>
                 </search>
             </field>
